--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alura Books</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    vou apostar na eslovaquia
+    <div class="container">
+        <input type="checkbox" id="menu" class="container__botao">
+        <label for="menu">
+            <span class="cabecalho_menu-hamburger container_imagem"></span>
+        </label>
+        <img src="/img/Logo.svg" alt="Logo Alura Books" class="cabecalho__imagem">
+    </div>
+
+    <div class="container">
+        <a href="#"><img src="/img/Favoritos.svg" alt="Imagem Favoritos" class="cabecalho__imagem"></a>
+        <a href="#"><img src="/img/Compras.svg" alt="Imagem Compras" class="cabecalho__imagem"></a>
+        <a href="#"><img src="/img/Usuário.svg" alt="Imagem Perfil de Usuário" class="cabecalho__imagem"></a>
+    </div>
+    </header>
 </body>
-</html>
